--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix",
-      "jest --passWithNoTests",
-      "git add"
+      "jest --passWithNoTests"
     ]
   }
 }
