Fix CI workflow error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
         run: npm ci
         
       - name: Linting
-        run: npm lint
+        run: npm run lint
 
       - name: Unit & Integration tests
-        run: yarn test:ci
+        run: npm run test:ci
 
       - name: Jest coverage report
         uses: ArtiomTr/jest-coverage-report-action@v2.0.6
