Fix CI workflow error part 2

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-		"test": "jest",
-		"test:ci": "jest --json --outputFile=jest-report.json",
+		"test": "jest --passWithNoTests",
+		"test:ci": "jest --passWithNoTests --json --outputFile=jest-report.json",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix",
     "prepare": "husky install"
   },
