Fix: remove coverage report for now due to lack of tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Unit & Integration tests
         run: npm run test:ci
 
-      - name: Jest coverage report
-        uses: ArtiomTr/jest-coverage-report-action@v2.0.6
-        with:
-          coverage-file: ./jest-report.json
-          base-coverage-file: ./jest-report.json
+      # - name: Jest coverage report
+      #   uses: ArtiomTr/jest-coverage-report-action@v2.0.6
+      #   with:
+      #     coverage-file: ./jest-report.json
+      #     base-coverage-file: ./jest-report.json
